@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-22-34
+DATE: 02/10/2023
+STAFF: sc
+WTS2-1114 - report of symbols with GO NOCTUA annotations that have
+   symbol, merger, or withdrawal, delete in the last month
+
 TAG: qcreports_db-6-0-22-33
 DATE: 02/09/2023
 STAFF: lec
